# butterfly

./: README.md  butterfly.db  pyproject.toml
services/app/: butterfly.db  manage.py  requirements.txt
services/app/butterfly/: __init__.py
services/app/butterfly/blueprints/: __init__.py  register_blueprints.py
services/app/butterfly/blueprints/auth/: view.py
services/app/butterfly/blueprints/database/: database.py
services/app/butterfly/blueprints/database/crud/: bookmark.py  comment.py  like.py  post.py  user.py  view.py
services/app/butterfly/blueprints/database/models/: __init__.py  bookmark.py  comment.py  like.py  post.py  user.py  view.py
services/app/butterfly/blueprints/database/schemas/: activity.py  comment.py  post.py  user.py
services/app/butterfly/blueprints/home/: helpers.py  view.py
services/app/butterfly/blueprints/post/: helper.py  view.py
services/app/butterfly/config/: config.py  logger_config.py  set_config.py
services/app/butterfly/extensions/: extensions.py  register_extensions.py
services/app/butterfly/helpers/: data_generator.py  erro_handlers.py  hooks.py  rate_limiter.py
services/app/butterfly/static/css/: style.css
services/app/butterfly/static/js/: index.js
services/app/butterfly/templates/home/: home.html
services/database/: docker-compose.yml
services/elasticsearch/: docker-compose.yml
services/elasticsearch/logstash/: logstash.conf
