[tool.poetry]
name = "butterfly"
version = "0.1.0"
description = "A web application for sharing images and messages with friends."
authors = ["twyle <lyceokoth@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
SQLAlchemy = "^2.0.20"
SQLAlchemy-Utils = "^0.41.1"
psycopg2-binary = "^2.9.7"
redis = "^5.0.0"
celery = "^5.3.1"
elasticsearch = "7.17.7"
Flask-Bcrypt = "^1.0.1"
PyJWT = "^2.8.0"
Faker = "^19.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
